--- a/src/Interfaces/Reclutador/Login.form
+++ b/src/Interfaces/Reclutador/Login.form
@@ -75,7 +75,7 @@
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace min="-2" pref="94" max="-2" attributes="0"/>
                   <Component id="jLabel1" min="-2" pref="233" max="-2" attributes="0"/>
-                  <EmptySpace pref="83" max="32767" attributes="0"/>
+                  <EmptySpace max="32767" attributes="0"/>
                   <Component id="jPanel3" min="-2" max="-2" attributes="0"/>
               </Group>
           </Group>
@@ -146,11 +146,6 @@
           </Layout>
           <SubComponents>
             <Component class="javax.swing.JLabel" name="jLabel5">
-              <Properties>
-                <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="2" name="C:\Users\Fernando\Documents\NetBeansProjects\ProyectoDatos\WhatsApp Image 2020-07-03 at 7.57.23 PM.jpeg"/>
-                </Property>
-              </Properties>
             </Component>
           </SubComponents>
         </Container>
