--- a/src/Interfaces/Reclutador/MenuAdmitidos.form
+++ b/src/Interfaces/Reclutador/MenuAdmitidos.form
@@ -158,7 +158,7 @@
               <Table columnCount="3" rowCount="0">
                 <Column editable="false" title="Nombre" type="java.lang.String"/>
                 <Column editable="false" title="Puesto" type="java.lang.String"/>
-                <Column editable="false" title="Fecha" type="java.lang.String"/>
+                <Column editable="false" title="Fecha Convocatoria" type="java.lang.String"/>
               </Table>
             </Property>
             <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
