--- a/src/Interfaces/Reclutador/MenuConvocatoriaR.form
+++ b/src/Interfaces/Reclutador/MenuConvocatoriaR.form
@@ -182,8 +182,10 @@
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Times New Roman" size="12" style="0"/>
                 </Property>
+                <Property name="lineWrap" type="boolean" value="true"/>
                 <Property name="rows" type="int" value="5"/>
                 <Property name="text" type="java.lang.String" value="REQUISITOS:&#xa;Hombres o mujeres mayores de 18 a&#xf1;os.&#xa;Con o Sin experiencia.&#xa;Disponibilidad para trabajar 8 horas diarias de Lunes a Sabado&#xa;en horarios rotativos entre las 7a.m. y 11p.m.&#xa;Disponibilidad para laborar en la ciudad de Huancayo.&#xa;Disponibilidad para realizar capacitaciones previas al ingreso&#xa;a laborar."/>
+                <Property name="wrapStyleWord" type="boolean" value="true"/>
               </Properties>
             </Component>
           </SubComponents>
@@ -213,8 +215,10 @@
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Times New Roman" size="12" style="0"/>
                 </Property>
+                <Property name="lineWrap" type="boolean" value="true"/>
                 <Property name="rows" type="int" value="5"/>
                 <Property name="text" type="java.lang.String" value="REQUISITOS:&#xa;Hombres o mujeres mayores de 18 a&#xf1;os.&#xa;Con o Sin experiencia.&#xa;Disponibilidad para trabajar 8 horas diarias de Lunes a Domingo&#xa;en horarios rotativos entre las 7a.m. y 11p.m.&#xa;Disponibilidad para laborar en estos distritos: Miraflores,&#xa;San Isidro, Pueblo Libre.&#xa;Disponibilidad para realizar capacitaciones previas al ingreso&#xa;a laborar."/>
+                <Property name="wrapStyleWord" type="boolean" value="true"/>
               </Properties>
             </Component>
           </SubComponents>
@@ -233,8 +237,10 @@
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Times New Roman" size="12" style="0"/>
                 </Property>
+                <Property name="lineWrap" type="boolean" value="true"/>
                 <Property name="rows" type="int" value="5"/>
                 <Property name="text" type="java.lang.String" value="REQUISITOS:&#xa;Hombres o mujeres mayores de 18 a&#xf1;os.&#xa;Con o Sin experiencia.&#xa;Disponibilidad para trabajar 4 horas diarias de Lunes a Sabado&#xa;en horarios rotativos entre las 7a.m. y 11p.m.&#xa;Disponibilidad para laborar en estos distritos: Cercado de Lima,&#xa;Santa Anita, San Juan de Lurigancho.&#xa;Disponibilidad para realizar capacitaciones previas al ingreso&#xa;a laborar."/>
+                <Property name="wrapStyleWord" type="boolean" value="true"/>
               </Properties>
             </Component>
           </SubComponents>
@@ -253,8 +259,10 @@
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Times New Roman" size="12" style="0"/>
                 </Property>
+                <Property name="lineWrap" type="boolean" value="true"/>
                 <Property name="rows" type="int" value="5"/>
                 <Property name="text" type="java.lang.String" value="No hay convocatoria en este momento"/>
+                <Property name="wrapStyleWord" type="boolean" value="true"/>
               </Properties>
             </Component>
           </SubComponents>
