--- a/src/Intrefaces/Postulante/IngresoDtosPostulantes.form
+++ b/src/Intrefaces/Postulante/IngresoDtosPostulantes.form
@@ -454,9 +454,9 @@
             </Property>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
               <StringArray count="6">
-                <StringItem index="0" value="Por medio de redes sociales"/>
-                <StringItem index="1" value="Por medio de afiches"/>
-                <StringItem index="2" value="Por medio de un amigo"/>
+                <StringItem index="0" value="Redes sociales"/>
+                <StringItem index="1" value="Afiches"/>
+                <StringItem index="2" value="Un amigo"/>
                 <StringItem index="3" value="Bumeran"/>
                 <StringItem index="4" value="Computrabajo"/>
                 <StringItem index="5" value="Otros"/>
